<resources>
    <string name="app_name">Comfest SEA 16</string>
    <string name="customer_service">Customer Service</string>
    <string name="customer_hello">Hi, User</string>
    <string name="our_service">Our Service</string>
    <string name="title">Welcome to SEA SALON!</string>
    <string name="description">Beauty and Elegance Redefined</string>

    <string name="title_service">Title</string>
    <string name="description_service">Deskripsi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">back button</string>
    <string name="customer_support">CUSTOMER SUPPORT</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="sekar">Sekar</string>
    <string name="phone_sekar">(08164829372)</string>
    <string name="contact_icon_description">Contact Icon</string>
    <string name="thomas">Thomas</string>
    <string name="phone_thomas">(08123456789)</string>
    <string name="contact_details_title">Contact Details</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="available_slots">Available Slots:</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="full_name">Full Name:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number:</string>
    <string name="type_of_service">Type of Service:</string>
    <string name="_10_00_11_00">10:00 - 11:00</string>
    <string name="_11_00_12_00">11:00 - 12:00</string>
    <string name="_12_00_13_00">12:00 - 13:00</string>
    <string name="_13_00_14_00">13:00 - 14:00</string>
    <string name="_14_00_15_00">14:00 - 15:00</string>
    <string name="_15_00_16_00">15:00 - 16:00</string>
    <string name="_16_00_17_00">16:00 - 17:00</string>
    <string name="_17_00_18_00">17:00 - 18:00</string>
    <string name="_18_00_19_00">18:00 - 19:00</string>
    <string name="_19_00_20_00">19:00 - 20:00</string>
    <string name="_20_00_21_00">20:00 - 21:00</string>
    <string name="_9_00_10_00">9:00 - 10:00</string>
    <string name="submit_button_form">Submit</string>
    <string name="reservation_form">RESERVATION FORM</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="rate_this_service">Rate this service</string>
    <string name="services_details">Services Details</string>
    <string name="date_and_time">Date and Time</string>
    <string name="review_system">Review System</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="tulis_ulasan_anda">Tulis ulasan Anda</string>
    <string name="service_type">Service Type</string>
    <string name="review_service">REVIEW SERVICE</string>
    <string name="submit">Submit</string>
    <string name="profile">PROFILE</string>
    <string name="this_is_your_profile">THIS IS YOUR PROFILE</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="logout">LOGOUT</string>
    <string name="email">Email</string>
    <string name="full_name1">Full Name</string>
    <string name="your_number">Your Number</string>

    <string-array name="data_name">
        <item>Haircut &amp; Styling</item>
        <item>Manicure &amp; Pedicure</item>
        <item>Facial Treatments</item>
    </string-array>

    <string-array name="data_description">
        <item>Snips, shapes, and styling for your locks.</item>
        <item>Nail care, polish, and relaxation for hands and feet.</item>
        <item>Cleansing, exfoliating, and rejuvenating your skin.</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/haircut</item>
        <item>@drawable/washing</item>
        <item>@drawable/beardshaving</item>
    </integer-array>

    <string-array name="time_options">
        <item>9:00 – 10:00</item>
        <item>10:00 – 11:00</item>
        <item>11:00 – 12:00</item>
        <item>12:00 – 13:00</item>
        <item>13:00 – 14:00</item>
        <item>14:00 – 15:00</item>
        <item>15:00 – 16:00</item>
        <item>16:00 – 17:00</item>
        <item>17:00 – 18:00</item>
        <item>18:00 – 19:00</item>
        <item>19:00 – 20:00</item>
        <item>20:00 – 21:00</item>
    </string-array>

</resources>