<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:contentDescription="@string/back_button"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/title_reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/reservation_form"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/full_name"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_reservation" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_your_full_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameLabel"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneLabel"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/serviceTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type_of_service"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <Spinner
            android:id="@+id/serviceTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/data_name"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceTypeLabel" />

        <TextView
            android:id="@+id/appointmentDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/appointment_date"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceTypeSpinner" />

        <TextView
            android:id="@+id/availableSlotsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_slots"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <RadioGroup
            android:id="@+id/availableSlotsRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/availableSlotsLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/slot9am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_9_00_10_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot10am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_10_00_11_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot11am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_11_00_12_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot12pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_12_00_13_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/slot13pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_13_00_14_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot14pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_14_00_15_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot15pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_15_00_16_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot16pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_16_00_17_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/slot17pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_17_00_18_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot18pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_18_00_19_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot19pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_19_00_20_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/slot20pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:text="@string/_20_00_21_00"
                    app:useMaterialThemeColors="false"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>

        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/submit_button_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/availableSlotsRadioGroup" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointmentDateLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>