<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color2"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/appointmentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/date_and_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/appointmentServices"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/services_details" />

        <Button
            android:id="@+id/rateButton"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/my_primary"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rate_this_service" />

    </LinearLayout>

</androidx.cardview.widget.CardView>